--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-linear-gradient": "^2.5.4",
     "react-native-material-textfield": "^0.12.0",
     "react-navigation": "^2.11.2",
     "react-navigation-material-bottom-tabs": "^1.0.0",
